compiler/test-data/parser/types/errors/draft_on_intrinsic.frel
module types.errors.draft_on_intrinsic

backend InvalidDraftBackend {
    temp : draft String
}
